--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "chmod +x node_modules/.bin/vite && tsc -b && vite build",
+     "build": "bash ./render-build.sh",
+  "build:internal": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
